chore: Upgrade Java version to 25 for catalog